api integration + frontend components

--- a/TodoMudBlazorApp.Client/Pages/Home.razor
+++ b/TodoMudBlazorApp.Client/Pages/Home.razor
@@ -1,59 +1,230 @@
 ﻿@page "/"
+@rendermode InteractiveWebAssembly
+@inject HttpClient Http
+@inject IDialogService DialogService
+@inject ISnackbar Snackbar
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Todo List</PageTitle>
 
-<MudText Typo="Typo.h3" GutterBottom="true">Hello, world!</MudText>
-<MudText Class="mb-8">Welcome to your new app, powered by MudBlazor and the .NET 9 Template!</MudText>
+<MudContainer MaxWidth="MaxWidth.Large" Class="mt-4">
+    <MudText Typo="Typo.h4" GutterBottom="true">My Todo List</MudText>
+    <MudText Typo="Typo.body1" Class="mb-4" Color="Color.Secondary">Manage your tasks efficiently</MudText>
 
-<MudAlert Severity="Severity.Normal" ContentAlignment="HorizontalAlignment.Start">
-    You can find documentation and examples on our website here:
-    <MudLink Href="https://mudblazor.com" Target="_blank" Typo="Typo.body2" Color="Color.Primary">
-        <b>www.mudblazor.com</b>
-    </MudLink>
-</MudAlert>
+    <MudPaper Elevation="2" Class="pa-4">
+        <div class="d-flex justify-space-between align-center mb-4">
+            <MudText Typo="Typo.h6">Tasks</MudText>
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.Add" OnClick="OpenAddDialog">
+                Add Todo
+            </MudButton>
+        </div>
 
-<br />
-<MudText Typo="Typo.h5" GutterBottom="true">Interactivity in this Template</MudText>
-<br />
-<MudText Typo="Typo.body2">
-    When you opt for the "Global" Interactivity Location, <br />
-    the render modes are defined in App.razor and consequently apply to all child components.<br />
-    In this case, providers are globally set in the MainLayout.<br />
-    <br />
-    On the other hand, if you choose the "Per page/component" Interactivity Location,<br />
-    it is necessary to include the <br />
-    <br />
-    &lt;MudPopoverProvider /&gt; <br />
-    &lt;MudDialogProvider /&gt; <br />
-    &lt;MudSnackbarProvider /&gt; <br />
-    <br />
-    components on every interactive page.<br />
-    <br />
-    If a render mode is not specified for a page, it defaults to Server-Side Rendering (SSR),<br />
-    similar to this page. While MudBlazor allows pages to be rendered in SSR,<br />
-    please note that interactive features, such as buttons and dropdown menus, will not be functional.
-</MudText>
+        @if (_isLoading)
+        {
+            <div class="d-flex justify-center py-8">
+                <MudProgressCircular Indeterminate="true" Size="Size.Large" />
+            </div>
+        }
+        else if (!_todos.Any())
+        {
+            <MudAlert Severity="Severity.Info" Class="mt-4">
+                No todos found. Click "Add Todo" to create your first task!
+            </MudAlert>
+        }
+        else
+        {
+            <MudTable Items="@_todos" Hover="true" Striped="true" Dense="true" Elevation="1">
+                <HeaderContent>
+                    <MudTh>Status</MudTh>
+                    <MudTh>Title</MudTh>
+                    <MudTh>Created</MudTh>
+                    <MudTh>Actions</MudTh>
+                </HeaderContent>
+                <RowTemplate>
+                    <MudTd DataLabel="Status">
+                        <MudSwitch T="bool" @bind-Checked="@context.IsCompleted" Color="Color.Success" OnCheckedChanged="@(() => ToggleTodo(context))" />
+                    </MudTd>
+                    <MudTd DataLabel="Title">
+                        <MudText Typo="@(context.IsCompleted ? Typo.body2 : Typo.body1)" 
+                                 Style="@(context.IsCompleted ? "text-decoration: line-through; opacity: 0.6;" : "")">
+                            @context.Title
+                        </MudText>
+                    </MudTd>
+                    <MudTd DataLabel="Created">
+                        <MudText Typo="Typo.caption">@context.CreatedAt.ToString("MMM dd, yyyy")</MudText>
+                    </MudTd>
+                    <MudTd DataLabel="Actions">
+                        <MudIconButton Icon="@Icons.Material.Filled.Edit" 
+                                      Color="Color.Primary" 
+                                      Size="Size.Small" 
+                                      OnClick="@(() => OpenEditDialog(context))" 
+                                      Title="Edit" />
+                        <MudIconButton Icon="@Icons.Material.Filled.Delete" 
+                                      Color="Color.Error" 
+                                      Size="Size.Small" 
+                                      OnClick="@(() => DeleteTodo(context))" 
+                                      Title="Delete" />
+                    </MudTd>
+                </RowTemplate>
+            </MudTable>
+        }
+    </MudPaper>
+</MudContainer>
 
-<br />
-<MudText Typo="Typo.h5" GutterBottom="true">What's New in Blazor with the Release of .NET 9</MudText>
-<br />
+@code {
+    private List<TodoItem> _todos = new();
+    private bool _isLoading;
 
-<MudText Typo="Typo.h6" GutterBottom="true">Prerendering</MudText>
-<MudText Typo="Typo.body2" GutterBottom="true">
-    If you're exploring the features of .NET 9 Blazor,<br /> you might be pleasantly surprised to learn that each page is prerendered on the server,<br /> regardless of the selected render mode.<br /><br />
-    This means that you'll need to inject all necessary services on the server,<br /> even when opting for the wasm (WebAssembly) render mode.<br /><br />
-    This prerendering functionality is crucial to ensuring that WebAssembly mode feels fast and responsive,<br /> especially when it comes to initial page load times.<br /><br />
-    For more information on how to detect prerendering and leverage the RenderContext, you can refer to the following link:
-    <MudLink Href="https://github.com/dotnet/aspnetcore/issues/51468#issuecomment-1783568121" Target="_blank" Typo="Typo.body2" Color="Color.Primary">
-        More details
-    </MudLink>
-</MudText>
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await Task.Delay(100);
+            await LoadTodos();
+        }
+    }
 
-<br />
-<MudText Typo="Typo.h6" GutterBottom="true">InteractiveAuto</MudText>
-<MudText Typo="Typo.body2">
-    A discussion on how to achieve this can be found here:
-    <MudLink Href="https://github.com/dotnet/aspnetcore/issues/51468#issue-1950424116" Target="_blank" Typo="Typo.body2" Color="Color.Primary">
-        More details
-    </MudLink>
-</MudText>
+    private async Task LoadTodos()
+    {
+        if (_isLoading)
+            return;
+
+        _isLoading = true;
+        StateHasChanged();
+
+        try
+        {
+            using var cts = new CancellationTokenSource(TimeSpan.FromSeconds(10));
+            var httpResponse = await Http.GetAsync("api/todo", cts.Token);
+            httpResponse.EnsureSuccessStatusCode();
+            var response = await httpResponse.Content.ReadFromJsonAsync<List<TodoItem>>(cts.Token);
+            _todos = response ?? new List<TodoItem>();
+        }
+        catch (TaskCanceledException)
+        {
+            Snackbar.Add("Request timed out while loading todos", Severity.Warning);
+        }
+        catch (Exception ex)
+        {
+            Snackbar.Add($"Error loading todos: {ex.Message}", Severity.Error);
+        }
+        finally
+        {
+            _isLoading = false;
+            StateHasChanged();
+        }
+    }
+
+    private async Task OpenAddDialog()
+    {
+        var parameters = new DialogParameters<TodoDialog>
+        {
+            { x => x.TodoItem, new TodoItem() },
+            { x => x.IsEditMode, false }
+        };
+
+        var options = new DialogOptions() 
+        { 
+            CloseOnEscapeKey = true, 
+            MaxWidth = MaxWidth.Small, 
+            FullWidth = true 
+        };
+
+        var dialog = await DialogService.ShowAsync<TodoDialog>("Add Todo", parameters, options);
+        var result = await dialog.Result;
+
+        if (result != null && !result.Canceled)
+        {
+            await LoadTodos();
+            StateHasChanged();
+        }
+    }
+
+    private async Task OpenEditDialog(TodoItem todo)
+    {
+        var parameters = new DialogParameters<TodoDialog>
+        {
+            { x => x.TodoItem, new TodoItem 
+            { 
+                Id = todo.Id, 
+                Title = todo.Title, 
+                IsCompleted = todo.IsCompleted,
+                CreatedAt = todo.CreatedAt,
+                UpdatedAt = todo.UpdatedAt
+            }},
+            { x => x.IsEditMode, true }
+        };
+
+        var options = new DialogOptions() 
+        { 
+            CloseOnEscapeKey = true, 
+            MaxWidth = MaxWidth.Small, 
+            FullWidth = true 
+        };
+
+        var dialog = await DialogService.ShowAsync<TodoDialog>("Edit Todo", parameters, options);
+        var result = await dialog.Result;
+
+        if (result != null && !result.Canceled)
+        {
+            await LoadTodos();
+            StateHasChanged();
+        }
+    }
+
+    private async Task ToggleTodo(TodoItem todo)
+    {
+        try
+        {
+            todo.IsCompleted = !todo.IsCompleted;
+            var response = await Http.PutAsJsonAsync($"api/todo/{todo.Id}", todo);
+            
+            if (response.IsSuccessStatusCode)
+            {
+                Snackbar.Add("Todo updated successfully", Severity.Success);
+                await LoadTodos();
+            }
+            else
+            {
+                Snackbar.Add("Failed to update todo", Severity.Error);
+                await LoadTodos();
+            }
+        }
+        catch (Exception ex)
+        {
+            Snackbar.Add($"Error updating todo: {ex.Message}", Severity.Error);
+            await LoadTodos();
+        }
+    }
+
+    private async Task DeleteTodo(TodoItem todo)
+    {
+        bool? result = await DialogService.ShowMessageBox(
+            "Delete Todo",
+            $"Are you sure you want to delete '{todo.Title}'?",
+            yesText: "Delete", 
+            cancelText: "Cancel",
+            options: new DialogOptions { CloseButton = true, MaxWidth = MaxWidth.ExtraSmall });
+
+        if (result == true)
+        {
+            try
+            {
+                var response = await Http.DeleteAsync($"api/todo/{todo.Id}");
+                
+                if (response.IsSuccessStatusCode)
+                {
+                    Snackbar.Add("Todo deleted successfully", Severity.Success);
+                    await LoadTodos();
+                }
+                else
+                {
+                    Snackbar.Add("Failed to delete todo", Severity.Error);
+                }
+            }
+            catch (Exception ex)
+            {
+                Snackbar.Add($"Error deleting todo: {ex.Message}", Severity.Error);
+            }
+        }
+    }
+}
