--- a/TodoMudBlazorApp.Client/_Imports.razor
+++ b/TodoMudBlazorApp.Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using MudBlazor
 @using MudBlazor.Services
+@using TodoMudBlazorApp.Client.Models
+@using TodoMudBlazorApp.Client.Components
